High Contrast: fix app-notifications
- get rid of the internal frame

https://bugzilla.gnome.org/show_bug.cgi?id=763781

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2618,6 +2618,7 @@ row.activatable {
                               mix(black, $bg_color, 4%));
   // FIXME no space for outer shadow : box-shadow: 0 1px 1px rgba(0,0,0,.5);
   .button { padding: 6px; }
+  border { border-width: 0; }
 }
 
 /*************
