--- a/gtk/theme/HighContrast/gtk-contained.css
+++ b/gtk/theme/HighContrast/gtk-contained.css
@@ -2774,6 +2774,9 @@ row.activatable {
   .app-notification .button,
   .app-notification.frame .button {
     padding: 6px; }
+  .app-notification border,
+  .app-notification.frame border {
+    border-width: 0; }
 
 /*************
  * Expanders *
